[project]
name = "ncp_wrapper"
version = "0.0.1"
authors = [
  { name="Jeongjin Kim", email="thefuturecreator@gmail.com" },
]
description = "Naver Cloud Platform Helper Classes and Methods"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thecodinglog/ncp"
"Bug Tracker" = "https://github.com/thecodinglog/ncp"